--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
                     <ruby>婆<rt>pó</rt></ruby>
                     <ruby>诃<rt>hē</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby><ruby class="kuohao">三<rt>&emsp;</rt></ruby><ruby class="kuohao">遍<rt>&emsp;</rt></ruby><ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <span class="kuoHao_YouPinYin">
+                        <ruby>（三遍）<rt>&emsp;</rt></ruby>
+                    </span>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -154,7 +156,11 @@
                     <ruby>诃<rt>hē</rt></ruby>
                     <ruby>贺<rt>hè</rt></ruby>
                     <ruby>斛<rt>hú</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby><ruby class="kuohao">（<rt>&emsp;</rt></ruby><ruby class="kuohao">三<rt>&emsp;</rt></ruby><ruby class="kuohao">遍<rt>&emsp;</rt></ruby><ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <ruby>。<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -193,7 +199,10 @@
                     <ruby>婆<rt>pó</rt></ruby>
                     <ruby>诃<rt>hē</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby><ruby class="kuohao">三<rt>&emsp;</rt></ruby><ruby class="kuohao">遍<rt>&emsp;</rt></ruby><ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -232,7 +241,10 @@
                     <ruby>度<rt>duó</rt></ruby>
                     <ruby>憾<rt>hàn</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby><ruby class="kuohao">三<rt>&emsp;</rt></ruby><ruby class="kuohao">遍<rt>&emsp;</rt></ruby><ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -272,7 +284,10 @@
                     <ruby>婆<rt>pó</rt></ruby>
                     <ruby>诃<rt>hē</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby><ruby class="kuohao">三<rt>&emsp;</rt></ruby><ruby class="kuohao">遍<rt>&emsp;</rt></ruby><ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -304,7 +319,10 @@
                     <ruby>啰<rt>là</rt></ruby>
                     <ruby>斛<rt>hú</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby><ruby class="kuohao">三<rt>&emsp;</rt></ruby><ruby class="kuohao">遍<rt>&emsp;</rt></ruby><ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
+                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -791,7 +809,19 @@
                     </strong>
                 </p>
                 <p class="zuoZhe">
-                    <ruby>唐<rt>táng</rt></ruby><ruby>于<rt>yú</rt></ruby><ruby>阗<rt>tián</rt></ruby><ruby>国<rt>guó</rt></ruby><ruby>三<rt>sān</rt></ruby><ruby>藏<rt>zàng</rt></ruby><ruby>沙<rt>shā</rt></ruby><ruby>门<rt>mén</rt></ruby><ruby>实<rt>shí</rt></ruby><ruby>叉<rt>chā</rt></ruby><ruby>难<rt>nán</rt></ruby><ruby>陀<rt>tuó</rt></ruby><ruby>译<rt>yì</rt></ruby>
+                    <ruby>唐<rt>táng</rt></ruby>
+                    <ruby>于<rt>yú</rt></ruby>
+                    <ruby>阗<rt>tián</rt></ruby>
+                    <ruby>国<rt>guó</rt></ruby>
+                    <ruby>三<rt>sān</rt></ruby>
+                    <ruby>藏<rt>zàng</rt></ruby>
+                    <ruby>沙<rt>shā</rt></ruby>
+                    <ruby>门<rt>mén</rt></ruby>
+                    <ruby>实<rt>shí</rt></ruby>
+                    <ruby>叉<rt>chā</rt></ruby>
+                    <ruby>难<rt>nán</rt></ruby>
+                    <ruby>陀<rt>tuó</rt></ruby>
+                    <ruby>译<rt>yì</rt></ruby>
                 </p>
                 <p class="kongHang_ZuoZhe">
                     <br class="kongHang_br">
