--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <ruby>诃<rt>hē</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
                     <span class="kuoHao_YouPinYin">
-                        <ruby>（三遍）<rt>&emsp;</rt></ruby>
+                        <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
                     </span>
                 </p>
                 <p class="kongHang_p">
@@ -157,10 +157,9 @@
                     <ruby>贺<rt>hè</rt></ruby>
                     <ruby>斛<rt>hú</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <span class="kuoHao_YouPinYin">
+                        <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
+                    </span>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -199,10 +198,9 @@
                     <ruby>婆<rt>pó</rt></ruby>
                     <ruby>诃<rt>hē</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <span class="kuoHao_YouPinYin">
+                        <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
+                    </span>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -241,10 +239,9 @@
                     <ruby>度<rt>duó</rt></ruby>
                     <ruby>憾<rt>hàn</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <span class="kuoHao_YouPinYin">
+                        <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
+                    </span>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -284,10 +281,9 @@
                     <ruby>婆<rt>pó</rt></ruby>
                     <ruby>诃<rt>hē</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <span class="kuoHao_YouPinYin">
+                        <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
+                    </span>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
@@ -319,10 +315,9 @@
                     <ruby>啰<rt>là</rt></ruby>
                     <ruby>斛<rt>hú</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">（<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">三<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">遍<rt>&emsp;</rt></ruby>
-                    <ruby class="kuohao">）<rt>&emsp;</rt></ruby>
+                    <span class="kuoHao_YouPinYin">
+                        <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
+                    </span>
                 </p>
                 <p class="kongHang_p">
                     <br class="kongHang_br">
