--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
                 </p>
                 <p class="zhengWen">
                     &emsp;&emsp;<ruby>唵<rt>ǎn</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby>嚩<rt>wá</rt></ruby>
-                    <ruby>日<rt>zǐ</rt></ruby>
-                    <ruby>啰<rt>là</rt></ruby>
-                    <ruby>怛<rt>dá</rt></ruby>
-                    <ruby>诃<rt>hē</rt></ruby>
-                    <ruby>贺<rt>hè</rt></ruby>
-                    <ruby>斛<rt>hú</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>嚩<rt>wá</rt></ruby>
+                            <ruby>日<rt>zǐ</rt></ruby>
+                            <ruby>啰<rt>là</rt></ruby>
+                            <ruby>怛<rt>dá</rt></ruby>
+                            <ruby>诃<rt>hē</rt></ruby>
+                            <ruby>贺<rt>hè</rt></ruby>
+                            <ruby>斛<rt>hú</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
                     <span class="kuoHao_YouPinYin">
                         <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
                     </span>
@@ -179,11 +179,11 @@
                     &emsp;&emsp;<ruby>唵<rt>ǎn</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
                     <ruby>修<rt>xiū</rt></ruby>
-                    <ruby>多<rt>duō</rt></ruby>
+                    <ruby>哆<rt>duō</rt></ruby>
                     <ruby>唎<rt>lì</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
                     <ruby>修<rt>xiū</rt></ruby>
-                    <ruby>多<rt>duō</rt></ruby>
+                    <ruby>哆<rt>duō</rt></ruby>
                     <ruby>唎<rt>lì</rt></ruby>
                     <ruby>。<rt>&emsp;</rt></ruby>
                     <ruby>修<rt>xiū</rt></ruby>
@@ -230,9 +230,9 @@
                     <ruby>嚩<rt>wá</rt></ruby>
                     <ruby>达<rt>dá</rt></ruby>
                     <ruby>摩<rt>mó</rt></ruby>
+                    <ruby>。<rt>&emsp;</rt></ruby>
                     <ruby>娑<rt>suō</rt></ruby>
                     <ruby>嚩<rt>wá</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
                     <ruby>婆<rt>pó</rt></ruby>
                     <ruby>嚩<rt>wá</rt></ruby>
                     <ruby>秫<rt>shú</rt></ruby>
@@ -258,29 +258,29 @@
                     </strong>
                 </p>
                 <p class="zhengWen">
-                    &emsp;&emsp;<ruby>南<rt>ná</rt></ruby>
-                    <ruby>无<rt>mó</rt></ruby>
-                    <ruby>三<rt>sān</rt></ruby>
-                    <ruby>满<rt>mǎn</rt></ruby>
-                    <ruby>多<rt>duō</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby>母<rt>mǔ</rt></ruby>
-                    <ruby>驮<rt>tuó</rt></ruby>
-                    <ruby>喃<rt>nán</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby>唵<rt>ǎn</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby>度<rt>dù</rt></ruby>
-                    <ruby>噜<rt>lū</rt></ruby>
-                    <ruby>度<rt>dù</rt></ruby>
-                    <ruby>噜<rt>lū</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby>地<rt>dì</rt></ruby>
-                    <ruby>尾<rt>wěi</rt></ruby>
-                    <ruby>娑<rt>suō</rt></ruby>
-                    <ruby>婆<rt>pó</rt></ruby>
-                    <ruby>诃<rt>hē</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
+                    &emsp;&emsp;<ruby>南<rt>nā</rt></ruby>
+                            <ruby>无<rt>mó</rt></ruby>
+                            <ruby>三<rt>sān</rt></ruby>
+                            <ruby>满<rt>mǎn</rt></ruby>
+                            <ruby>多<rt>duō</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>母<rt>mǔ</rt></ruby>
+                            <ruby>驮<rt>tuó</rt></ruby>
+                            <ruby>喃<rt>nán</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>唵<rt>ǎn</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>度<rt>dù</rt></ruby>
+                            <ruby>噜<rt>lū</rt></ruby>
+                            <ruby>度<rt>dù</rt></ruby>
+                            <ruby>噜<rt>lū</rt></ruby>
+                            <ruby>地<rt>dì</rt></ruby>
+                            <ruby>尾<rt>wěi</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>萨<rt>sà</rt></ruby>
+                            <ruby>婆<rt>pó</rt></ruby>
+                            <ruby>诃<rt>hē</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
                     <span class="kuoHao_YouPinYin">
                         <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
                     </span>
@@ -293,7 +293,7 @@
                         <span class="erJiBiaoTi_span">
                             <ruby>普<rt>pǔ</rt></ruby>
                             <ruby>供<rt>gòng</rt></ruby>
-                            <ruby>养<rt>yàng</rt></ruby>
+                            <ruby>养<rt>yǎng</rt></ruby>
                             <ruby>真<rt>zhēn</rt></ruby>
                             <ruby>言<rt>yán</rt></ruby>
                         </span>
@@ -301,20 +301,20 @@
                 </p>
                 <p class="zhengWen">
                     &emsp;&emsp;<ruby>唵<rt>ǎn</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby>誐<rt>yé</rt></ruby>
-                    <ruby>誐<rt>yé</rt></ruby>
-                    <ruby>曩<rt>nǎng</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby>三<rt>sān</rt></ruby>
-                    <ruby>婆<rt>pó</rt></ruby>
-                    <ruby>嚩<rt>wá</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
-                    <ruby>韈<rt>wà</rt></ruby>
-                    <ruby>日<rt>zǐ</rt></ruby>
-                    <ruby>啰<rt>là</rt></ruby>
-                    <ruby>斛<rt>hú</rt></ruby>
-                    <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>誐<rt>yé</rt></ruby>
+                            <ruby>誐<rt>yé</rt></ruby>
+                            <ruby>曩<rt>nǎng</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>三<rt>sān</rt></ruby>
+                            <ruby>婆<rt>pó</rt></ruby>
+                            <ruby>嚩<rt>wá</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
+                            <ruby>韈<rt>wà</rt></ruby>
+                            <ruby>日<rt>zǐ</rt></ruby>
+                            <ruby>啰<rt>lā</rt></ruby>
+                            <ruby>斛<rt>hú</rt></ruby>
+                            <ruby>。<rt>&emsp;</rt></ruby>
                     <span class="kuoHao_YouPinYin">
                         <ruby>&emsp;（三遍）<rt>&emsp;</rt></ruby>
                     </span>
